src/test/ui/privacy/restricted/relative-2018.stderr
error[E0742]: visibilities can only be restricted to ancestor modules
  --> $DIR/relative-2018.rs:7:12
   |
LL |     pub(in ::core) struct S4;
   |            ^^^^^^

error: relative paths are not supported in visibilities in 2018 edition or later
  --> $DIR/relative-2018.rs:9:12
   |
LL |     pub(in a::b) struct S5;
   |            ^---
   |            |
   |            help: try: `crate::a::b`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0742`.
